# fullsend

./: Cargo.toml  LICENSE  README.md
.github/ISSUE_TEMPLATE/: feature-request.yaml
.github/workflows/: build-and-test.yaml
examples/: content.rs  simple.rs
src/: auth.rs  client.rs  lib.rs  message.rs
